--- a/homeassistant/components/aten_pe/manifest.json
+++ b/homeassistant/components/aten_pe/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "aten_pe",
   "name": "ATEN Rack PDU",
+  "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/aten_pe",
   "requirements": ["atenpdu==0.3.2"],
   "codeowners": ["@mtdcr"],
