--- a/homeassistant/components/sabnzbd/manifest.json
+++ b/homeassistant/components/sabnzbd/manifest.json
@@ -7,5 +7,6 @@
   "after_dependencies": ["discovery"],
   "codeowners": [],
   "iot_class": "local_polling",
+  "config_flow": true,
   "loggers": ["pysabnzbd"]
 }
