--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -59,6 +59,7 @@ homeassistant/components/atome/* @baqs
 homeassistant/components/august/* @bdraco
 homeassistant/components/aurora/* @djtimca
 homeassistant/components/aurora_abb_powerone/* @davet2001
+homeassistant/components/aussie_broadband/* @nickw444
 homeassistant/components/auth/* @home-assistant/core
 homeassistant/components/automation/* @home-assistant/core
 homeassistant/components/avea/* @pattyland
