--- a/homeassistant/components/sabnzbd/manifest.json
+++ b/homeassistant/components/sabnzbd/manifest.json
@@ -5,7 +5,7 @@
   "requirements": ["pysabnzbd==1.1.1"],
   "dependencies": ["configurator"],
   "after_dependencies": ["discovery"],
-  "codeowners": [],
+  "codeowners": ["@shaiu"],
   "iot_class": "local_polling",
   "config_flow": true,
   "loggers": ["pysabnzbd"]
