Added config flow

--- a/homeassistant/components/ta_cmi/manifest.json
+++ b/homeassistant/components/ta_cmi/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "ta_cmi",
   "name": "Technische Alternative C.M.I.",
-  "config_flow": false,
+  "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/ta_cmi",
   "requirements": [
     "ta-cmi==0.1.1"
