--- a/.coveragerc
+++ b/.coveragerc
@@ -1198,6 +1198,9 @@ omit =
     homeassistant/components/tado/device_tracker.py
     homeassistant/components/tado/sensor.py
     homeassistant/components/tado/water_heater.py
+	homeassistant/components/ta_cmi/__init__.py
+	homeassistant/components/ta_cmi/const.py
+	homeassistant/components/ta_cmi/sensor.py
     homeassistant/components/tank_utility/sensor.py
     homeassistant/components/tankerkoenig/__init__.py
     homeassistant/components/tankerkoenig/binary_sensor.py
