--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -2251,6 +2251,9 @@ synology-srm==0.2.0
 # homeassistant.components.system_bridge
 systembridge==2.3.1
 
+# homeassistant.components.ta_cmi
+ta-cmi==0.1.1
+
 # homeassistant.components.tailscale
 tailscale==0.2.0
 
