Add mixin regex
https://pylint.pycqa.org/en/latest/technical_reference/features.html#typecheck-checker-options

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,6 +114,7 @@ score = false
 ignored-classes = [
     "_CountingAttr",  # for attrs
 ]
+mixin-class-rgx = ".*[Mm]ix[Ii]n"
 
 [tool.pylint.FORMAT]
 expected-line-ending-format = "LF"
