--- a/homeassistant/components/simplisafe/services.yaml
+++ b/homeassistant/components/simplisafe/services.yaml
@@ -3,13 +3,14 @@ remove_pin:
   name: Remove PIN
   description: Remove a PIN by its label or value.
   fields:
-    system_id:
-      name: System ID
-      description: The SimpliSafe system ID to affect.
+    device_id:
+      name: System
+      description: The system to remove the PIN from
       required: true
-      example: 123987
       selector:
-        text:
+        device:
+          integration: simplisafe
+          model: alarm_control_panel
     label_or_pin:
       name: Label/PIN
       description: The label/value to remove.
@@ -21,13 +22,14 @@ set_pin:
   name: Set PIN
   description: Set/update a PIN
   fields:
-    system_id:
-      name: System ID
-      description: The SimpliSafe system ID to affect
+    device_id:
+      name: System
+      description: The system to set the PIN on
       required: true
-      example: 123987
       selector:
-        text:
+        device:
+          integration: simplisafe
+          model: alarm_control_panel
     label:
       name: Label
       description: The label of the PIN
@@ -47,8 +49,8 @@ set_system_properties:
   description: Set one or more system properties
   fields:
     device_id:
-      name: Valve Controller
-      description: The valve controller to remove the sensor from
+      name: System
+      description: The system whose properties should be set
       required: true
       selector:
         device:
