--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -212,7 +212,7 @@ homeassistant/components/huawei_router/* @abmantis
 homeassistant/components/hue/* @balloob @frenck
 homeassistant/components/huisbaasje/* @denniss17
 homeassistant/components/humidifier/* @home-assistant/core @Shulyaka
-homeassistant/components/hunterdouglas_powerview/* @bdraco
+homeassistant/components/hunterdouglas_powerview/* @bdraco @kingy444
 homeassistant/components/hvv_departures/* @vigonotion
 homeassistant/components/hydrawise/* @ptcryan
 homeassistant/components/hyperion/* @dermotduffy
