--- a/homeassistant/components/hunterdouglas_powerview/manifest.json
+++ b/homeassistant/components/hunterdouglas_powerview/manifest.json
@@ -3,7 +3,7 @@
   "name": "Hunter Douglas PowerView",
   "documentation": "https://www.home-assistant.io/integrations/hunterdouglas_powerview",
   "requirements": ["aiopvapi==1.6.14"],
-  "codeowners": ["@bdraco"],
+  "codeowners": ["@bdraco", "@kingy444"],
   "config_flow": true,
   "homekit": {
     "models": ["PowerView"]
