--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -649,7 +649,19 @@ jobs:
 
   pytest:
     runs-on: ubuntu-latest
-    needs: prepare-tests
+    needs:
+      - gen-requirements-all
+      - hassfest
+      - lint-bandit
+      - lint-black
+      - lint-codespell
+      - lint-dockerfile
+      - lint-executable-shebangs
+      - lint-isort
+      - lint-json
+      - lint-pyupgrade
+      - lint-yaml
+      - prepare-tests
     strategy:
       fail-fast: false
       matrix:
