--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -825,6 +825,9 @@ pyalmond==0.0.2
 # homeassistant.components.arlo
 pyarlo==0.2.4
 
+# homeassistant.components.radarr
+aiopyarr==0.0.1
+
 # homeassistant.components.atag
 pyatag==0.3.5.3
 
@@ -1122,6 +1125,9 @@ pysqueezebox==0.5.5
 
 # homeassistant.components.syncthru
 pysyncthru==0.7.10
+
+# homeassistant.components.tautulli
+pytautulli==21.11.0
 
 # homeassistant.components.ecobee
 python-ecobee-api==0.2.14
