Add partial codecov flag to CI to trigger carryforward coverage

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -912,3 +912,5 @@ jobs:
           coverage xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2.1.0
+        with:
+          flags: partial
