--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -430,7 +430,7 @@ jobs:
 
           python -m venv venv
           . venv/bin/activate
-          pip install -U "pip<20.3" "setuptools==58.5.3" wheel
+          pip install -U "pip<20.3" setuptools wheel
           pip install -r requirements_all.txt
           pip install -r requirements_test.txt
           pip install -e .
