Attempt with XML output

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -698,7 +698,7 @@ jobs:
             --test-group-count ${{ needs.changes.outputs.test_group_count }} \
             --test-group=${{ matrix.group }} \
             --cov homeassistant \
-            --cov-report= \
+            --cov-report=xml \
             -o console_output_style=count \
             -p no:sugar \
             tests
@@ -712,7 +712,7 @@ jobs:
             --durations=10 \
             -n auto \
             --cov homeassistant.components.${{ matrix.group }} \
-            --cov-report= \
+            --cov-report=xml \
             --cov-report=term-missing \
             -o console_output_style=count \
             -p no:sugar \
@@ -721,12 +721,12 @@ jobs:
         if: needs.changes.outputs.test_full_suite == 'true'
         uses: codecov/codecov-action@v2.1.0
         with:
-          files: .coverage
+          files: coverage.xml
       - name: Upload coverage to Codecov (partial coverage)
         if: needs.changes.outputs.test_full_suite == 'false'
         uses: codecov/codecov-action@v2.1.0
         with:
-          files: .coverage
+          files: coverage.xml
           flags: ${{ matrix.group }}
       - name: Check dirty
         run: |
