--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -466,19 +466,18 @@ jobs:
     name: Check hassfest
     runs-on: ubuntu-latest
     needs: prepare-tests
-    strategy:
-      matrix:
-        python-version: [3.8]
-    container: homeassistant/ci-azure:${{ matrix.python-version }}
+    env:
+      PYTHON_VERSION: 3.8
+    container: homeassistant/ci-azure:${{ env.PYTHON_VERSION }}
     steps:
       - name: Check out code from GitHub
         uses: actions/checkout@v2.4.0
-      - name: Restore full Python ${{ matrix.python-version }} virtual environment
+      - name: Restore full Python ${{ env.PYTHON_VERSION }} virtual environment
         id: cache-venv
         uses: actions/cache@v2.1.7
         with:
           path: venv
-          key: ${{ runner.os }}-${{ matrix.python-version }}-${{
+          key: ${{ runner.os }}-${{ env.PYTHON_VERSION }}-${{
             needs.prepare-tests.outputs.python-key }}
       - name: Fail job if Python cache restore failed
         if: steps.cache-venv.outputs.cache-hit != 'true'
@@ -570,19 +569,18 @@ jobs:
     needs:
       - changes
       - prepare-tests
-    strategy:
-      matrix:
-        python-version: [3.8]
-    container: homeassistant/ci-azure:${{ matrix.python-version }}
+    env:
+      PYTHON_VERSION: 3.8
+    container: homeassistant/ci-azure:${{ env.PYTHON_VERSION }}
     steps:
       - name: Check out code from GitHub
         uses: actions/checkout@v2.4.0
-      - name: Restore full Python ${{ matrix.python-version }} virtual environment
+      - name: Restore full Python ${{ env.PYTHON_VERSION }} virtual environment
         id: cache-venv
         uses: actions/cache@v2.1.7
         with:
           path: venv
-          key: ${{ runner.os }}-${{ matrix.python-version }}-${{
+          key: ${{ runner.os }}-${{ env.PYTHON_VERSION }}-${{
             needs.prepare-tests.outputs.python-key }}
       - name: Fail job if Python cache restore failed
         if: steps.cache-venv.outputs.cache-hit != 'true'
@@ -610,19 +608,18 @@ jobs:
     needs:
       - changes
       - prepare-tests
-    strategy:
-      matrix:
-        python-version: [3.8]
-    container: homeassistant/ci-azure:${{ matrix.python-version }}
+    env:
+      PYTHON_VERSION: 3.8
+    container: homeassistant/ci-azure:${{ env.PYTHON_VERSION }}
     steps:
       - name: Check out code from GitHub
         uses: actions/checkout@v2.4.0
-      - name: Restore full Python ${{ matrix.python-version }} virtual environment
+      - name: Restore full Python ${{ env.PYTHON_VERSION }} virtual environment
         id: cache-venv
         uses: actions/cache@v2.1.7
         with:
           path: venv
-          key: ${{ runner.os }}-${{ matrix.python-version }}-${{
+          key: ${{ runner.os }}-${{ env.PYTHON_VERSION }}-${{
             needs.prepare-tests.outputs.python-key }}
       - name: Fail job if Python cache restore failed
         if: steps.cache-venv.outputs.cache-hit != 'true'
