--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -795,7 +795,7 @@ py-synologydsm-api==1.0.4
 py17track==3.2.1
 
 # homeassistant.components.control4
-pyControl4==0.2.0
+pyControl4==1.0.0b1
 
 # homeassistant.components.met_eireann
 pyMetEireann==2021.8.0
