--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1613,6 +1613,9 @@ pymeteoclimatic==0.0.6
 # homeassistant.components.somfy
 pymfy==0.11.0
 
+# homeassistant.components.micropel
+pymicropel==0.9.0
+
 # homeassistant.components.xiaomi_tv
 pymitv==1.4.3
 
