--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -873,6 +873,9 @@ pydispatcher==2.0.5
 # homeassistant.components.econet
 pyeconet==0.1.14
 
+# homeassistant.components.ecowitt
+pyecowitt==0.21
+
 # homeassistant.components.efergy
 pyefergy==0.1.5
 
