--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -392,6 +392,9 @@ bimmer_connected==0.8.2
 # homeassistant.components.bizkaibus
 bizkaibus==0.1.1
 
+# homeassistant.components.walkingpad
+bleak==0.13.0
+
 # homeassistant.components.blebox
 blebox_uniapi==1.3.3
 
@@ -1192,6 +1195,9 @@ pencompy==0.0.3
 # homeassistant.components.unifi_direct
 pexpect==4.6.0
 
+# homeassistant.components.walkingpad
+ph4-walkingpad==0.0.3
+
 # homeassistant.components.modem_callerid
 phone_modem==0.1.1
 
@@ -1906,6 +1912,7 @@ python-kasa==0.4.0
 # homeassistant.components.lirc
 # python-lirc==1.2.3
 
+# homeassistant.components.walkingpad
 # homeassistant.components.xiaomi_miio
 python-miio==0.5.8
 
