Add hub.py to .coveragerc

--- a/.coveragerc
+++ b/.coveragerc
@@ -702,6 +702,7 @@ omit =
     homeassistant/components/nanoleaf/__init__.py
     homeassistant/components/nanoleaf/button.py
     homeassistant/components/nanoleaf/entity.py
+    homeassistant/components/nanoleaf/hub.py
     homeassistant/components/nanoleaf/light.py
     homeassistant/components/neato/__init__.py
     homeassistant/components/neato/api.py
