--- a/homeassistant/components/progettihwsw/manifest.json
+++ b/homeassistant/components/progettihwsw/manifest.json
@@ -5,5 +5,6 @@
   "codeowners": ["@ardaseremet"],
   "requirements": ["progettihwsw==0.1.2"],
   "config_flow": true,
-  "iot_class": "local_polling"
+  "iot_class": "local_polling",
+  "version": "2.0.0"
 }
