--- a/homeassistant/components/webostv/manifest.json
+++ b/homeassistant/components/webostv/manifest.json
@@ -3,7 +3,7 @@
   "name": "LG webOS Smart TV",
   "documentation": "https://www.home-assistant.io/integrations/webostv",
   "requirements": ["aiopylgtv==0.4.0"],
-  "dependencies": ["configurator"],
+  "dependencies": ["configurator", "plex"],
   "codeowners": ["@bendavid", "@thecode"],
   "iot_class": "local_polling"
 }
