--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -733,5 +733,11 @@ jobs:
     steps:
       - name: Download all coverage artifacts
         uses: actions/download-artifact@v2
-      - name: Upload coverage to Codecov
+      - name: Upload coverage to Codecov (full coverage)
+        if: needs.changes.outputs.test_full_suite == 'true'
+        uses: codecov/codecov-action@v2.1.0
+        with:
+          flags: full-suite
+      - name: Upload coverage to Codecov (partial coverage)
+        if: needs.changes.outputs.test_full_suite == 'false'
         uses: codecov/codecov-action@v2.1.0
