--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1371,6 +1371,9 @@ pyatome==0.1.1
 # homeassistant.components.apple_tv
 pyatv==0.8.2
 
+# homeassistant.components.aussie_broadband
+pyaussiebb==0.0.9
+
 # homeassistant.components.balboa
 pybalboa==0.13
 
