--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -837,6 +837,9 @@ pyatmo==6.2.0
 # homeassistant.components.apple_tv
 pyatv==0.8.2
 
+# homeassistant.components.aussie_broadband
+pyaussiebb==0.0.9
+
 # homeassistant.components.balboa
 pybalboa==0.13
 
