--- a/homeassistant/components/atome/manifest.json
+++ b/homeassistant/components/atome/manifest.json
@@ -3,6 +3,6 @@
   "name": "Atome Linky",
   "documentation": "https://www.home-assistant.io/integrations/atome",
   "codeowners": ["@baqs"],
-  "requirements": ["pyatome==0.1.1"],
+  "requirements": ["pykeyatome==1.1.2"],
   "iot_class": "cloud_polling"
 }
