Add config flow to discord

--- a/homeassistant/components/discord/manifest.json
+++ b/homeassistant/components/discord/manifest.json
@@ -3,6 +3,7 @@
   "name": "Discord",
   "documentation": "https://www.home-assistant.io/integrations/discord",
   "requirements": ["discord.py==1.7.3"],
-  "codeowners": [],
+  "codeowners": ["@tkdrob"],
+  "config_flow": true,
   "iot_class": "cloud_push"
 }
