--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -350,6 +350,9 @@ devolo-plc-api==0.6.3
 # homeassistant.components.directv
 directv==0.4.0
 
+# homeassistant.components.discord
+discord.py==1.7.3
+
 # homeassistant.components.doorbird
 doorbirdpy==2.1.0
 
@@ -1131,6 +1134,9 @@ pysqueezebox==0.5.5
 
 # homeassistant.components.syncthru
 pysyncthru==0.7.10
+
+# homeassistant.components.tautulli
+pytautulli==21.11.0
 
 # homeassistant.components.ecobee
 python-ecobee-api==0.2.14
