--- a/homeassistant/components/elmax/manifest.json
+++ b/homeassistant/components/elmax/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "elmax",
-  "name": "elmax-cloud",
+  "name": "Elmax",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/elmax",
   "requirements": ["elmax_api==0.0.2"],
