--- a/homeassistant/components/radarr/manifest.json
+++ b/homeassistant/components/radarr/manifest.json
@@ -2,8 +2,6 @@
   "domain": "radarr",
   "name": "Radarr",
   "documentation": "https://www.home-assistant.io/integrations/radarr",
-  "requirements": ["aiopyarr==0.0.1"],
-  "codeowners": ["@tkdrob"],
-  "config_flow": true,
+  "codeowners": [],
   "iot_class": "local_polling"
 }
