--- a/homeassistant/components/flux_led/manifest.json
+++ b/homeassistant/components/flux_led/manifest.json
@@ -2,6 +2,7 @@
   "domain": "flux_led",
   "name": "Flux LED/MagicHome",
   "config_flow": true,
+  "dependencies": ["network"],
   "documentation": "https://www.home-assistant.io/integrations/flux_led",
   "requirements": ["flux_led==0.26.2"],
   "quality_scale": "platinum",
