--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -2520,3 +2520,6 @@ zm-py==0.5.2
 
 # homeassistant.components.zwave_js
 zwave-js-server-python==0.33.0
+
+# homeassistant.components.zwave_me
+zwave_me_ws==0.1.7
