--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1501,3 +1501,6 @@ zigpy==0.42.0
 
 # homeassistant.components.zwave_js
 zwave-js-server-python==0.33.0
+
+# homeassistant.components.zwave_me
+zwave_me_ws==0.1.7
