--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -302,7 +302,7 @@ co2signal==0.4.2
 coinbase==2.1.0
 
 # homeassistant.scripts.check_config
-colorlog==6.4.1
+colorlog==6.6.0
 
 # homeassistant.components.color_extractor
 colorthief==0.2.1
@@ -1056,7 +1056,8 @@ pyotgw==1.1b1
 
 # homeassistant.auth.mfa_modules.notify
 # homeassistant.auth.mfa_modules.totp
-pyotp==2.3.0
+# homeassistant.components.otp
+pyotp==2.6.0
 
 # homeassistant.components.openweathermap
 pyowm==3.2.0
