--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -318,6 +318,7 @@ homeassistant/components/meteoclimatic/* @adrianmo
 homeassistant/components/metoffice/* @MrHarcombe
 homeassistant/components/miflora/* @danielhiversen @basnijholt
 homeassistant/components/mikrotik/* @engrbm87
+homeassistant/components/mikrotik_firewall/* @emes30
 homeassistant/components/mill/* @danielhiversen
 homeassistant/components/min_max/* @fabaff
 homeassistant/components/minecraft_server/* @elmurato
