--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1247,6 +1247,9 @@ roombapy==1.6.4
 # homeassistant.components.roon
 roonapi==0.0.38
 
+# homeassistant.components.mikrotik_firewall
+routeros-api==0.17.0
+
 # homeassistant.components.rpi_power
 rpi-bad-power==0.1.0
 
