Add scaffolded philips_air_purifier integration

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -823,6 +823,8 @@ build.json @home-assistant/supervisor
 /tests/components/peco/ @IceBotYT
 /homeassistant/components/persistent_notification/ @home-assistant/core
 /tests/components/persistent_notification/ @home-assistant/core
+/homeassistant/components/philips_air_purifier/ @mfrister
+/tests/components/philips_air_purifier/ @mfrister
 /homeassistant/components/philips_js/ @elupus
 /tests/components/philips_js/ @elupus
 /homeassistant/components/pi_hole/ @johnluetke @shenxn
