--- a/homeassistant/components/apcupsd/manifest.json
+++ b/homeassistant/components/apcupsd/manifest.json
@@ -5,7 +5,7 @@
   "documentation": "https://www.home-assistant.io/integrations/apcupsd",
   "dependencies": [],
   "requirements": ["apcaccess==0.0.13"],
-  "codeowners": [],
+  "codeowners": ["@yxwangcs"],
   "iot_class": "local_polling",
   "loggers": ["apcaccess"]
 }
