First version of laundrify integration

--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -636,6 +636,9 @@ kostal_plenticore==0.2.0
 # homeassistant.components.kraken
 krakenex==2.1.0
 
+# homeassistant.components.laundrify
+laundrify_aio==1.0.0
+
 # homeassistant.components.foscam
 libpyfoscam==1.0
 
