--- a/homeassistant/components/bsblan/manifest.json
+++ b/homeassistant/components/bsblan/manifest.json
@@ -1,9 +1,9 @@
 {
   "domain": "bsblan",
-  "name": "BSB-Lan",
+  "name": "BSBLAN",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/bsblan",
-  "requirements": ["bsblan==0.5.0"],
+  "requirements": ["python-bsblan==0.5.5"],
   "codeowners": ["@liudger"],
   "iot_class": "local_polling",
   "loggers": ["bsblan"]
