--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -462,9 +462,6 @@ brottsplatskartan==0.0.1
 # homeassistant.components.brunt
 brunt==1.2.0
 
-# homeassistant.components.bsblan
-bsblan==0.5.0
-
 # homeassistant.components.bluetooth_tracker
 bt_proximity==0.2.1
 
@@ -1939,6 +1936,9 @@ pythinkingcleaner==0.0.3
 
 # homeassistant.components.blockchain
 python-blockchain-api==0.0.2
+
+# homeassistant.components.bsblan
+python-bsblan==0.5.5
 
 # homeassistant.components.clementine
 python-clementine-remote==1.0.1
