--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1351,6 +1351,9 @@ pyswitchbee==1.4.8
 # homeassistant.components.syncthru
 pysyncthru==0.7.10
 
+# homeassistant.components.bsblan
+python-bsblan==0.5.5
+
 # homeassistant.components.tankerkoenig
 pytankerkoenig==0.0.6
 
