Fix name field of manifest.json.

--- a/homeassistant/components/apcupsd/manifest.json
+++ b/homeassistant/components/apcupsd/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "apcupsd",
-  "name": "APCUPSd",
+  "name": "apcupsd",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/apcupsd",
   "dependencies": [],
