--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -802,6 +802,8 @@ build.json @home-assistant/supervisor
 /homeassistant/components/qbittorrent/ @geoffreylagaisse
 /homeassistant/components/qld_bushfire/ @exxamalte
 /tests/components/qld_bushfire/ @exxamalte
+/homeassistant/components/qr_generator/ @DeerMaximum
+/tests/components/qr_generator/ @DeerMaximum
 /homeassistant/components/quantum_gateway/ @cisasteelersfan
 /homeassistant/components/qvr_pro/ @oblogic7
 /homeassistant/components/qwikswitch/ @kellerza
