--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1728,6 +1728,9 @@ pypjlink2==1.2.1
 # homeassistant.components.plaato
 pyplaato==0.0.16
 
+# homeassistant.components.qr_generator
+pypng==0.0.21
+
 # homeassistant.components.point
 pypoint==2.3.0
 
@@ -1739,6 +1742,9 @@ pyprosegur==0.0.5
 
 # homeassistant.components.ps4
 pyps4-2ndscreen==1.3.1
+
+# homeassistant.components.qr_generator
+pyqrcode==1.2.1
 
 # homeassistant.components.qvr_pro
 pyqvrpro==0.52
