--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1159,6 +1159,9 @@ pypck==0.7.14
 # homeassistant.components.plaato
 pyplaato==0.0.16
 
+# homeassistant.components.qr_generator
+pypng==0.0.21
+
 # homeassistant.components.point
 pypoint==2.3.0
 
@@ -1170,6 +1173,9 @@ pyprosegur==0.0.5
 
 # homeassistant.components.ps4
 pyps4-2ndscreen==1.3.1
+
+# homeassistant.components.qr_generator
+pyqrcode==1.2.1
 
 # homeassistant.components.qwikswitch
 pyqwikswitch==0.93
