--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -2042,6 +2042,9 @@ raspyrfm-client==1.2.8
 # homeassistant.components.rainmachine
 regenmaschine==2022.01.0
 
+# homeassistant.components.reisingerbridge
+reisinger-drive==0.2.0
+
 # homeassistant.components.renault
 renault-api==0.1.10
 
