--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1329,6 +1329,9 @@ radios==0.1.1
 # homeassistant.components.rainmachine
 regenmaschine==2022.01.0
 
+# homeassistant.components.reisingerbridge
+reisinger-drive==0.2.0
+
 # homeassistant.components.renault
 renault-api==0.1.10
 
