Exclude diagnostics.py from coverage report

--- a/.coveragerc
+++ b/.coveragerc
@@ -204,6 +204,7 @@ omit =
     homeassistant/components/discord/notify.py
     homeassistant/components/discovergy/__init__.py
     homeassistant/components/discovergy/sensor.py
+    homeassistant/components/discovergy/diagnostics.py
     homeassistant/components/dlib_face_detect/image_processing.py
     homeassistant/components/dlib_face_identify/image_processing.py
     homeassistant/components/dlink/data.py
